# rustfinder

./: .dockerignore  .env  .gitignore  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  appveyor.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
doc/: arch.mermaid
src/: main.rs
src/application/auth/: login_cqrs.rs  mod.rs
src/domain/user/: mod.rs  user_model.rs
src/domain/user/entity/: mod.rs  roles.rs  user.rs
src/domain/user/repository/: mod.rs  port.rs  user_repository_port.rs
src/infrastructure/database/: connection.rs
src/persistence/user/repository/: user_repository.rs
src/port/: mod.rs
src/port/user/: mod.rs
src/presentation/: api.rs  apidoc.rs  auth.rs  mod.rs
src/usecases/user/: auth_service.rs  user_service.rs
