[package]
name = "rustfinder"
version = "0.0.1"
edition = "2021"
authors = ["Daniel Zavrin <hanamik0@protonmail.com>"]
categories = ["development-tools", "web-programming", "web-programming::http-server"]
repository = "https://github.com/sengokudaikon/rustfinder"
license = "MIT"
exclude = [".gitignore", ".travis.yml", "appveyor.yml"]
build = "build.rs"

[dependencies]
rocket = "0.4.11"
rocket_contrib = "0.4.11"
anyhow = "1.0.26"
futures = "0.3.5"
http = "0.2.0"
iovec = "0.1.4"
libc = "0.2.66"
nodrop = "0.1.14"
ryu = "1.0.2"
failure = "0.1.6"
rocket-sentry = "0.15.0"
rocket_auth = "0.4.0"
serde = "1.0.188"
serde_json = "1.0.44"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2.3.0"
slog-json = "2.3.0"
slog-term = "2.4.2"
tokio = "1.32.0"
tokio-postgres = "0.7.10"
tokio-reactor = "0.1.11"
tokio-sync = "0.1.7"
diesel = { version = "2.1.1", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
jsonwebtoken = "8.3.0"
rocket-jwt = "0.5.1"
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
web-view = { version = "0.7.3" }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true

[badges]
appveyor = { repository = "sengokudaikon/rustfinder" }
is-it-maintained-issue-resolution = { repository = "sengokudaikon/rustfinder" }