[package]
name = "rustfinder"
version = "0.0.1"
edition = "2021"
authors = ["Daniel Zavrin <hanamik0@proton.me>"]
categories = ["development-tools", "web-programming", "web-programming::http-server"]
repository = "https://github.com/sengokudaikon/rustfinder"
license = "MIT"
exclude = [".gitignore", ".travis.yml", "appveyor.yml"]
build = "build.rs"

[dependencies]
async-trait = "0.1.73"
rocket = { version ="0.5.0-rc.3", features = ["uuid", "serde_json", "json", "default"] }
rocket_anyhow = "0.1.1"
argon2 = "0.5.2"
password-hash = "0.5.0"
rand = "0.8.4"
uuid = "1.4.1"
dotenv = "0.15.0"
anyhow = "1.0.26"
futures = "0.3.5"
http = "0.2.0"
iovec = "0.1.4"
libc = "0.2.66"
nodrop = "0.1.14"
ryu = "1.0.2"
failure = "0.1.6"
rocket-sentry = "0.15.0"
rocket_auth = "0.4.0"
serde = "1.0.188"
serde_json = "1.0.44"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2.3.0"
slog-json = "2.3.0"
slog-term = "2.4.2"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = "0.7.10"
tokio-reactor = "0.1.11"
tokio-sync = "0.1.7"
deadpool-postgres = "0.10.5"
jsonwebtoken = "8.3.0"
rocket-jwt = "0.5.1"
utoipa = {version = "3.5.0", features = ["rocket_extras", "chrono", "uuid", "openapi_extensions", "rc_schema"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["rocket"]}
utoipa_auto_discovery = "0.3.0"
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true

[badges]
appveyor = { repository = "sengokudaikon/rustfinder" }
is-it-maintained-issue-resolution = { repository = "sengokudaikon/rustfinder" }
